<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.photogal.search.SearchActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/search_searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_toEndOf="@+id/search_toDateLabel"
            android:layout_toRightOf="@+id/search_toDateLabel"
            android:onClick="search"
            android:text="Search"
            app:layout_constraintEnd_toEndOf="@+id/search_keywordText"
            app:layout_constraintTop_toBottomOf="@+id/search_keywordText" />

        <Button
            android:id="@+id/search_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/search_toDate"
            android:layout_alignRight="@+id/search_toDate"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:onClick="cancel"
            android:text="Cancel"
            app:layout_constraintEnd_toStartOf="@+id/search_searchButton"
            app:layout_constraintTop_toTopOf="@+id/search_searchButton" />

        <TextView
            android:id="@+id/search_toDateLabel"
            android:layout_width="73dp"
            android:layout_height="19dp"
            android:layout_alignStart="@+id/search_fromDateLabel"
            android:layout_alignLeft="@+id/search_fromDateLabel"
            android:layout_alignTop="@+id/search_toDate"
            android:layout_marginTop="32dp"
            android:text="To Date: "
            app:layout_constraintStart_toStartOf="@+id/search_keywordLabel"
            app:layout_constraintTop_toBottomOf="@+id/search_fromDate" />

        <TextView
            android:id="@+id/title_search"
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:text="Photogallery Application"
            android:textSize="30sp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/search_fromDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/title_search"
            android:layout_alignLeft="@+id/title_search"
            android:layout_alignBottom="@+id/search_fromDate"
            android:layout_marginTop="32dp"
            android:text="From Date: "
            app:layout_constraintStart_toStartOf="@+id/search_toDateLabel"
            app:layout_constraintTop_toBottomOf="@+id/title_search" />

        <EditText
            android:id="@+id/search_fromDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_search"
            android:layout_alignEnd="@+id/title_search"
            android:layout_alignRight="@+id/title_search"
            android:ems="10"
            android:inputType="none"
            app:layout_constraintStart_toStartOf="@+id/search_toDate"
            app:layout_constraintTop_toBottomOf="@+id/search_fromDateLabel" />

        <EditText
            android:id="@+id/search_toDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/search_fromDate"
            android:layout_alignEnd="@+id/search_fromDate"
            android:layout_alignRight="@+id/search_fromDate"
            android:ems="10"
            android:inputType="none"
            app:layout_constraintStart_toStartOf="@+id/search_keywordText"
            app:layout_constraintTop_toBottomOf="@+id/search_toDateLabel" />

        <TextView
            android:id="@+id/search_keywordLabel"
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:text="Keywords:"
            app:layout_constraintStart_toStartOf="@+id/title_search"
            app:layout_constraintTop_toBottomOf="@+id/search_toDate" />

        <EditText
            android:id="@+id/search_keywordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="@+id/title_search"
            app:layout_constraintTop_toBottomOf="@+id/search_keywordLabel" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>