<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/main_imageView"
        tools:srcCompat="@tools:sample/backgrounds/scenic"
        android:layout_width="344dp"
        android:layout_height="323dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/main_TimeStamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="timeStamp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_imageView" />

    <Button
        android:id="@+id/main_searchButton"
        android:layout_width="342dp"
        android:layout_height="47dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:text="Search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/main_SnapButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="snapPhoto()"
        android:text="Snap"
        app:layout_constraintBottom_toTopOf="@+id/main_searchButton"
        app:layout_constraintEnd_toStartOf="@+id/main_RightButton"
        app:layout_constraintStart_toEndOf="@+id/main_LeftButton"
        app:layout_constraintTop_toBottomOf="@+id/main_CaptionEditText" />

    <Button
        android:id="@+id/main_RightButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="8dp"
        android:text="Right"
        app:layout_constraintBottom_toTopOf="@+id/main_searchButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_CaptionEditText"
        app:layout_constraintVertical_bias="0.545" />

    <Button
        android:id="@+id/main_LeftButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="Left"
        app:layout_constraintBottom_toTopOf="@+id/main_searchButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_CaptionEditText"
        app:layout_constraintVertical_bias="0.545" />

    <EditText
        android:id="@+id/main_CaptionEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="Add a caption"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_TimeStamp" />

    <TextView
        android:id="@+id/main_noResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="No Results"
        android:textSize="36sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/main_CaptionEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/main_CommentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="submitComment"
        android:text="Submit"
        app:layout_constraintBaseline_toBaselineOf="@+id/main_CaptionEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/main_CaptionEditText" />

    <TextView
        android:id="@+id/main_locationText"
        android:layout_width="134dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_TimeStamp" />
</android.support.constraint.ConstraintLayout>